# cinenova

./: .dockerignore  .editorconfig  .env.example  .eslintrc.cjs  .gitattributes  .gitignore  .prettierignore  LICENSE  README.md  commitlint.config.cjs  package.json  pnpm-lock.yaml  render.yaml  tsconfig.base.json  turbo.json  vercel.json
.github/workflows/: ci.yml  docker-publish.yml
apps/ai/: README.md  pyproject.toml
apps/ai/app/: main.py
apps/ai/app/core/: config.py  db.py  redis.py
apps/ai/app/pipelines/: moderator.py  rag.py  recommender.py  summarizer.py
apps/ai/app/providers/: base.py  factory.py  gemini.py  ollama.py
apps/ai/app/routers/: chat.py  health.py  moderate.py  recommend.py  summarize.py
apps/ai/tests/: test_pricing_logic.py  test_providers.py
apps/api/: package.json  tsconfig.json  vitest.config.ts
apps/api/src/: app.module.ts  main.ts
apps/web/: .eslintrc.cjs  next.config.ts  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.json  vercel.json
apps/web/app/: globals.css  layout.tsx  not-found.tsx
apps/web/e2e/: smoke.spec.ts
apps/web/lib/: api-client.ts  auth-store.ts  utils.ts
docs/adr/: 0001-turborepo-vs-nx.md  0002-redis-seat-lock.md  0003-pgvector-vs-qdrant.md  0004-modular-monolith.md  0005-llm-provider-strategy.md  0006-authjs-v5.md  0007-conventional-commits.md  README.md  template.md
docs/runbook/: deploy.md  local-dev.md  troubleshooting.md
docs/superpowers/specs/: 2026-05-08-cinenova-design.md  (+1 more)
infra/: docker-compose.yml
infra/docker/: ai.Dockerfile  api.Dockerfile  web.Dockerfile
(+91 files in other folders)
