[project]
name = "cinenova-ai"
version = "0.1.0"
description = "CineNova AI service — chatbot, recommendations, review summarization"
authors = [{ name = "dellacee" }]
license = { text = "MIT" }
requires-python = ">=3.12"

dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "pydantic>=2.10.0",
  "pydantic-settings>=2.6.0",
  "httpx>=0.27.0",
  "asyncpg>=0.30.0",
  "sqlalchemy[asyncio]>=2.0.36",
  "redis>=5.2.0",
  "google-generativeai>=0.8.3",
  "python-jose[cryptography]>=3.3.0",
  "structlog>=24.4.0",
  "sse-starlette>=2.1.3",
  "tenacity>=9.0.0",
  "pgvector>=0.3.6",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.3",
  "pytest-asyncio>=0.24.0",
  "pytest-cov>=6.0.0",
  "ruff>=0.8.0",
  "mypy>=1.13.0",
  "respx>=0.21.1",
]

[tool.uv]
dev-dependencies = [
  "pytest>=8.3.3",
  "pytest-asyncio>=0.24.0",
  "ruff>=0.8.0",
  "mypy>=1.13.0",
  "respx>=0.21.1",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "ASYNC", "RUF"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
